--- a/01_basic/basic12.html
+++ b/01_basic/basic12.html
@@ -62,7 +62,9 @@
     // 定数btnがクリックされたら
     // 変数 textValueを作成し、textのvalueを代入する
     btn.onclick = () => {
-      console.log(text);
+
+      let textValue = document.getElementById('text').value;
+      console.log(textValue);
     }
     // コンソール画面に変数textValueを表示
 
